# EVCharging

./: .gitignore  README.md  create_kafka_topics.bat  create_kafka_topics.ps1  pyproject.toml
EV_Central/: .env.example  CChargingPoint.py  Charging_point.db  GUI.py  central.py  central_config.py  compose.yaml  cp_listing_producer.py  cp_status.py  directives_producer.py  dockerfile  main.py  monitor_handler.py  monitor_handler_og.py  monitor_not_responding_exception.py  monitor_server.py  pyproject.toml  run.sh  stx_etx_connection.py  supply_error_producer.py  supply_info_consumer.py  supply_info_producer.py  supply_req_consumer.py  supply_res_producer.py  test.py
EV_Central/data/: Charging_point.db
EV_Central/kafka/: kafka_subscribers.py
EV_Central/kafka/messages/: CentralCommandMessage.py  SupplyRequestMessage.py  SupplyRequestNotificationMessage.py  SupplyResponseMessage.py  SupplyTelemetryMessage.py  __init__.py
EV_Central/models/: CP.py  Supply.py
EV_Central/models/init_script/: init.py
EV_Central/src/EV_Central/: main.py
EV_Central/src/kafka/: kafka_subscribers.py
EV_Central/src/models/: CP.py  CPStatus.py  Event.py
EV_Central/src/sockets/: handle_monitor.py  make_handler.py
EV_Central/src/state/: ActiveSupply.py  CPCollection.py  CPInfo.py  Database.py  RegistryKey.py
EV_Central/state/: ActiveSupply.py  CPCollection.py  CPInfo.py
EV_Registry/: .env.example  pyproject.toml
EV_Registry/src/EV_Registry/: auth.py  database.py  main.py  models.py  routes.py
communications/: pyproject.toml
communications/src/communications/: __init__.py
(+95 files in other folders)
