[project]
name = "ev-registry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "pyjwt>=2.12.1",
    "pymysql>=1.1.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
