[project]
name = "communications"
version = "0.1.0"
description = "Library for managing the communications via sockets or Kafka of the app"
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.14.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
